# cognitoidentityprovider-examples

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  bin.rs  confirm_signup.rs  lib.rs  signup.rs
