[package]
name = "cognitoidentityprovider-examples"
version = "0.1.0"
authors = ["Chris Fraser <github@chris.frasernolet.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"
test = true
doc = true

[[bin]]
name = "cognitoidentityprovider-example"
path = "src/bin.rs"

[dependencies]
aws-config = "0.5.2"
aws-sdk-cognitoidentityprovider = "0.5.2"
aws-smithy-types-convert = { version = "0.35.2", features = ["convert-chrono"] }
aws-types = "0.5.2"
structopt = "0.3.26"
tokio = { version = "1.15.0", features = ["full"] }
tracing-subscriber = "0.3.6"
temp-env = "0.2.0"
rpassword = "5.0.1"
